Fixed alignment of icons with text so socials boxes complete

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,6 @@
     }
 
     .social h1 {
-        padding-bottom: 10px;
         margin: 0px;
     }
 
@@ -111,6 +110,7 @@
         color: rgb(255, 255, 255);
         font-size: 20px;
         padding-bottom: 30px;
+        padding-top: 20px;
     }
 
     .social img {
@@ -123,6 +123,17 @@
         display: flex;
         justify-content: center;
         gap: 12px;
+    }
+
+    .social-title h1 {
+        margin: 0;
+        line-height: 1;
+    }
+
+    .social-title img {
+        display: block;
+        width: 40px;
+        height: 40px;
     }
             
     footer {
